# gbrc-website

./: .gitignore  README.md  docker-compose.yml  start.sh
backend/: pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: chat.py  content.py  dashboard.py  intake.py  router.py  services.py
backend/app/config/: settings.py
backend/app/data/: charges.csv  crc_users_fy2023.tsv  crc_users_fy2024.tsv  crc_users_fy2025.tsv  events.csv  grant_index_map.csv  proposals.csv
backend/app/db/: engine.py
backend/app/models/: __init__.py  intake.py
backend/app/schemas/: dashboard.py  intake.py
backend/app/services/: checkbox_data.py  college_mapping.py  intake_ai.py  intake_service.py  mindrouter.py
frontend/: nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: DnaHelix.tsx  Footer.tsx  Navbar.tsx
frontend/src/components/dashboard/: AffiliationTab.tsx  CRCGrowthChart.tsx  ChartCard.tsx  CollegeBarChart.tsx  DashboardAuth.tsx  DataInspector.tsx  DepartmentsTab.tsx  FYComparisonChart.tsx  InfrastructureTab.tsx  PIBarChart.tsx  PIDetailTable.tsx  PIdrilldownPanel.tsx  ProposalsTab.tsx  RevenueSourcesTab.tsx  ServicePieChart.tsx  ServicesTab.tsx  StatCard.tsx  (+5 more)
frontend/src/data/: training.ts
frontend/src/hooks/: useChat.ts  useDashboardData.ts  useIntakeForm.ts
frontend/src/pages/: About.tsx  Contact.tsx  CostRecovery.tsx  GettingStarted.tsx  Home.tsx  ProjectIntake.tsx  Services.tsx  Training.tsx
frontend/src/types/: dashboard.ts
(+9 files in other folders)
